# java-rs

./: Cargo.toml  README.md
java-rs-base/: Cargo.toml
java-rs-base/src/: error.rs  io.rs  java_utf8.rs  lib.rs  version.rs
java-rs-base/src/constant_pool/: mod.rs
java-rs-derive/: Cargo.toml
java-rs-derive/src/: attribute.rs  lib.rs
java-rs-derive/src/enum_handler/: mod.rs
java-rs-derive/src/enum_handler/generators/: attribute.rs  code.rs  mod.rs
java-rs-derive/src/struct_handler/: mod.rs  named.rs  options.rs  unnamed.rs
java-rs-derive/src/utils/: conversion.rs  generation.rs
java-rs-pacific/: Cargo.toml
java-rs-pacific/src/: field.rs  lib.rs  method.rs
java-rs-pacific/src/attribute/: annotation.rs  code.rs  inner_classes.rs  line_number_table.rs  mod.rs  source_debug_extension.rs  stack_map.rs  type_annotation.rs
java-rs-tool/: Cargo.toml
java-rs-tool/src/: main.rs
java-rs-tool/src/commands/: deobfuscate.rs  dump.rs  mod.rs  obfuscate.rs  replicate.rs
java-rs-tool/src/helpers/: io.rs  mod.rs  obfuscation.rs
