[package]
name = "java-rs-tool"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
java-rs-pacific = { path = "../java-rs-pacific" }
java-rs-derive = { path = "../java-rs-derive" }
java-rs-base = { path = "../java-rs-base" }
clap = "3.0.0-beta.2"
zip = "0.5.9"
hex = "0.4.2"
indicatif = "0.15.0"